transactions-service/Chart-tran-service/templates/tran-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tran-service
spec:
  selector:
    app: tran
  ports: 
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
