transactions-service/Chart-tran-service/templates/tran-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tran-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: golang.medhelper.xyz
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
